adapt HybrisAntTaks for 2205